--- a/practica2b.tex
+++ b/practica2b.tex
@@ -101,7 +101,46 @@ claficador = construir clasificador con los datos de entrenamiento solo con las 
 return el porcentaje de acierto de este clasificador etiquetando los datos de test de los que consideramos solo las caracteristicas seleccionadas por la solucion
 \end{lstlisting}
 
-A cada algoritmo le daremos solamente los datos de entrenamiento separados en características y etiquetas pera que con la estragia de búsqueda que implemente nos devuelva la mejor solución posible para él, luego la evaluación de la solución final la haremos fuera del algoritmo con los datos de test (en la sección 8 explicaremos cómo hemos generado las particiones). Para aquellos algoritmos que empleando algún tipo de aleatoriedad en sus decisiones inicilizaremos la semilla aleatoria antes de la ejecución de dicho algoritmo.	\\
+A cada algoritmo le daremos solamente los datos de entrenamiento separados en características y etiquetas pera que con la estragia de búsqueda que implemente nos devuelva la mejor solución posible para él, luego la evaluación de la solución final la haremos fuera del algoritmo con los datos de test (en la sección 8 explicaremos cómo hemos generado las particiones). Para aquellos algoritmos que empleando algún tipo de aleatoriedad en sus decisiones inicilizaremos la semilla aleatoria antes de la ejecución de dicho algoritmo.\\
+
+Tanto en la BMB como en el ILS hemos de generar unas soluciones aleatorias, para cada algoritmo esta solución aleatoria se generada de un modo diferente:\\
+
+Para la BMB:\\
+
+\begin{lstlisting}
+for cada iteracion del algoritmo:
+	Obtengo una muestra aleatoria de len = n_caracteristica muestreada uniforme y con remplazamiento.
+\end{lstlisting}
+
+Para el ILS:\\
+
+\begin{lstlisting}
+al inicio del algoritmo y nunca mas:
+	Obtengo una muestra aleatoria de len = n_caracteristica muestreada uniforme y con remplazamiento.
+\end{lstlisting}
+
+El proceso de búsqueda local empleado es el que implementamos en la primera práctica, como sabemos la factorización en el caso de la selección de características no es trivial por lo que en nuestro caso, al contrario que en el QAP, no empleamos ningún mecanismo de factorización para el cálculo de la función objetivo. El operador de generación de vecino ya ha sido descrito anteriormente, \textit{flip}. El mecanismo de búsqueda de la búsqueda local es como sigue:\\
+
+\begin{lstlisting}
+s = solucion que le pasamos por param.
+n_sols_generados = 0
+
+while n_sols_generados < max_permitido:
+	for cada vecino de s explorados en orden aleatorio:
+		n_sols_generados++
+		
+		if el vecino es mejor que s:
+			s = el vecino
+			dejamos de explorar vecinos
+					
+	if no hemos encontrado ninguna solucion mejor en todo el vecindario:
+		return s
+		
+return s
+\end{lstlisting}
+
+Aquí hay un cambio fundamental con respecto a la práctica anterior y es que antes la solución de la que se partía era aleatoria, ahora nosotros le decimos con qué solución comenzar el proceso de búsqueda local, que puede ser con una solución aleatoria como en el caso de la BMB o con una mutación de la mejor solución encontrada hasta el momento como en el ILS.\\
+
 \newpage
 
 \section{\color[rgb]{0.0,0.0,0.21}Descripción en pseudocódigo de los algoritmos}
@@ -122,6 +161,27 @@ return mejor_s
 
 \subsection{\color[rgb]{0.0,0.0,0.51}GRASP (GRASP.py)}
 
+El algoritmo de generación de soluciones greedy probabilísticas funciona del siguiente modo:\\
+\begin{lstlisting}
+sol = un array binario con todo False #conjunto vacio de caracteristicas
+
+while tengamos ganancia and queden caracteristicas por aniadir:
+	calcular el score de cada caracteristica por aniadir al agregarla al conjunto actual
+	
+	mu = mejor_score_de_los_candidatos - 0.3(mejor_score_de_los_candidatos - mejor_score_de_los_candidatos)
+	
+	lista_restringida_candidatos = caracteristicas de las anteriores que den ganancia >= mu
+	elegimos una caracteristica aleatoria de la listra restringida
+	
+	if el score aniadiendola es mejor que el de el conjunto mejor al que habia:
+		se agrega dicha caracteristica al conjunto
+		quitamos esa caracteristica de el conjunto de caracteristicas por aniadir
+	else:
+		no tenemos ganancia y acabamos el bucle
+		
+return el conjunto de caracteristicas al que hemos llegado
+\end{lstlisting}
+
 \begin{lstlisting}
 for 25 veces:
 	s_greedy = sol. encontrada por el greedy aleatorio
@@ -135,8 +195,13 @@ return mejor_s
 
 \newpage
 \subsection{\color[rgb]{0.0,0.0,0.51} ILS (ILS.py)}
-
-Aquí tenemos el pseudocódigo para la búsqueda tabú básica, en el también se ve cómo manejamos la lista tabú como una lista cíclica que consultamos para ver si un vecino ha sido generado mediante un movimiento tabú:\\
+\begin{lstlisting}
+mutar(s):
+	t = ceil(0.1*n_caracteristicas)
+	genes_a_mutar = elegimos t genes aleatorios, sin repeticion, para ser mutados
+	cambiamos el valor de cada gen de s a mutar por su complementario
+	
+\end{lstlisting}
 
 \begin{lstlisting}
 s = sol. inicial aleatoria
@@ -173,15 +238,14 @@ while tengamos ganancia and queden caracteristicas por aniadir:
 return el conjunto de caracteristicas al que hemos llegado
 \end{lstlisting}
 \newpage
+
 \section{\color[rgb]{0.0,0.0,0.21}Procedimiento considerado para desarrollar la práctica}
 
 \subsection{\color[rgb]{0.0,0.0,0.51}Desarrollo}
 
-El código usado en prácticas lo he implementado yo a partir de las explicaciones dadas tanto en clase de prácticas como de teoría sobre los distintos algoritmos, siendo de mucha utilidad los pseudocódigos de las transparencia de teoría así como el esqueme de funcinamiento de las búsqueda tabú, también de las transparencia.\\
+El código usado en prácticas lo he implementado yo a partir de las explicaciones dadas tanto en clase de prácticas como de teoría sobre los distintos algoritmos, siendo de mucha utilidad las indicaciones del gruión de práctias.\\
 
 La parte que no ha sido implementada por mí es la correspondiente a la evaluación de las soluciones, es decir, tanto el KNN como los mecanismos de evaluación de las soluciones. Para ello he usado el código desarrollado por \textbf{Alejandro García Montoro} el cuál ha implementado tanto el clasificador KNN como los mecanismos para obtener el score de las soluciones dentro (con LOO) y fuera de la muestra con PyCUDA que permite insertar código CUDA en código Python. Con lo cual los tiempos de ejecución bajan considerablemente con respecto a los tiempos de la práctica anterior ya que el cuello de botella de los algoritmos, que es la evaluación de las soluciones con LOO, se ejecuta en la tarjeta gráfica, siendo mucho más rápidos los cálculos.\\
-
-Además tiene una función para hacer las pruebas Leave One Out dándole un conjunto de datos y nos dice los índices para poder separar el conjunto de datos de aprendizaje en una muestra por un lado y el resto por otro y poder calcular la función objetivo como queremos.\\
 
 \subsection{\color[rgb]{0.0,0.0,0.51}Manual de usuario}
 Los algoritmos han sido implementados en Python 3.1 TODO para su ejecución son necesarios tener instalados los módulos compatibles con esta versión de Python siguientes:\\
@@ -194,13 +258,13 @@ Los algoritmos han sido implementados en Python 3.1 TODO para su ejecución son 
 \item El resto de módulos empleados suelen venir con las distribuciones básicas de Python (random, sys y time).
 \end{itemize}
 
-Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textbf{\textcolor{green}{LEEME}} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: 3NN, SFS, BMB, GRASP, e ILS. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
+Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textbf{\textcolor{green}{LEEME}} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: 3NN, SFS, BMB, GRASP e ILS. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
 
 Entonces para ejecutar por ejemplo los experimentos para el GRASP lo que haremos es \textit{python mainCUDA.py GRASP} y se ejecutará el algoritmo sobre todas las particiones de datos que tenemos.\\
 
-En el directorio \textbf{\textcolor{green}{make\_partitions}} tenemos tanto los archivos arff como los códigos necesarios para elaborar las particiones que serán utilizadas por nuestros algoritmos. Esto no es necesario para ejecutar los programas puesto que en el directorio \textbf{\textcolor{green}{partitions}} tenemos almacenadas todas las particiones construidas. No obstante si se quisiera replicar el procedimiento de desarrollo de particiones lo que haríamos sería: eliminar los archivos con extensión .npy del directorio \textbf{make\_partitions} (para tener seguridad de que no se corrompan dichos archivos), ejecutar el loader con la instrucción \textbf{python loader.py} y a continuación elaborar las particiones con \textbf{python partition\_maker.py} (dentro de este directorio que es donde se encuentran ambos códigos). Esto generará diversos archivos de extensión .npy con nombres que empiezan por arr, wdbc o libras (según la base) seguida de un número y la palabra test o training.\\
+En el directorio \textbf{\textcolor{green}{make\_partitions32b}} tenemos tanto los archivos arff como los códigos necesarios para elaborar las particiones que serán utilizadas por nuestros algoritmos. Esto no es necesario para ejecutar los programas puesto que en el directorio \textbf{\textcolor{green}{partitions32b}} tenemos almacenadas todas las particiones construidas. No obstante si se quisiera replicar el procedimiento de desarrollo de particiones lo que haríamos sería: eliminar los archivos con extensión .npy del directorio \textbf{make\_partitions32b} (para tener seguridad de que no se corrompan dichos archivos), ejecutar el loader con la instrucción \textbf{python loader.py} y a continuación elaborar las particiones con \textbf{python partition\_maker.py} (dentro de este directorio que es donde se encuentran ambos códigos). Esto generará diversos archivos de extensión .npy con nombres que empiezan por arr, wdbc o libras (según la base) seguida de un número y la palabra test o training.\\
 
-Estos archivos deberán reemplazar a aquellos que se encuentran en el directorio \textbf{partitions} y ya podremos ejecutar los algoritmos con dichas particiones desde el main.\\
+Estos archivos deberán reemplazar a aquellos que se encuentran en el directorio \textbf{partitions32b} y ya podremos ejecutar los algoritmos con dichas particiones desde el main.\\
 
 \newpage
 \section{\color[rgb]{0.0,0.0,0.21}Experimentos y análisis de resultados}
